broken: menu does pop out, but won't size correctly
width: inherit gets the 32%, which is evaluated for the entire window,
because i made it pop out with position: absolute.  Fundamentally I
consider my approach may be flawed, it may not be possible to inherit
the width once "popped out".

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <title>Eilish design: Menus, Scrolling images, etc.</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
+
+<div class="menuBar">
+    <div class="menuMainOpt" onmouseover="toggle('about')" onmouseout="toggle('about')">
+        <span>about</span>
+        <div class="menuList" id="about">
+            abc def xyz
+            <div class="menuItem"><span>a</span></div>
+            <div class="menuItem"><span>b</span></div>
+            <div class="menuItem"><span>c</span></div>
+        </div>
+    </div>
+    <div class="menuMainOpt">stuff</div>
+    <div class="menuMainOpt">ipsum</div>
+</div>
 <div class="main">
     Words
 </div>
