--- a/index.html
+++ b/index.html
@@ -10,17 +10,47 @@
 
 
 <div class="menuBar">
-    <div class="menuMainOpt" onmouseover="toggle('about')" onmouseout="toggle('about')">
-        <span>about</span>
-        <div class="menuList" id="about">
-            abc def xyz
-            <div class="menuItem"><span>a</span></div>
-            <div class="menuItem"><span>b</span></div>
-            <div class="menuItem"><span>c</span></div>
-        </div>
-    </div>
-    <div class="menuMainOpt">stuff</div>
-    <div class="menuMainOpt">ipsum</div>
+    <ul class="menuTop">
+        <li onmouseover="toggle('about')" onmouseout="toggle('about')">
+            about
+            <ul class="menuSub" id="about">
+                <li>aaa</li>
+                <li>bbb</li>
+            </ul>
+        </li>
+        <li onmouseover="toggle('stuff')" onmouseout="toggle('stuff')">
+            stuff
+            <ul class="menuSub" id="stuff">
+                <li>ccc</li>
+                <li>ddd</li>
+            </ul>
+        </li>
+        <li onmouseover="toggle('ipsum')" onmouseout="toggle('ipsum')">
+            ipsum
+            <ul class="menuSub" id="ipsum">
+                <li>www</li>
+                <li>zzz</li>
+            </ul>
+        </li>
+        <li>
+            quasi moko of the salem empire
+        </li>
+    </ul>
+
+    <!--<div class="menuMainOpt" onmouseover="toggle('about')" onmouseout="toggle('about')">-->
+        <!--<span>about</span>-->
+        <!--<div class="menuList" id="about">-->
+            <!--<ul>-->
+                <!--<li><a href="#">x</a></li>-->
+                <!--<li><a href="#">y</a></li>-->
+                <!--<li><a href="#">z</a></li>-->
+                <!--<li><a href="#">lorem ipsum</a></li>-->
+                <!--<li><a href="#">lorem ipsum valor ingos rigidalium hoopla</a></li>-->
+            <!--</ul>-->
+        <!--</div>-->
+    <!--</div>-->
+    <!--<div class="menuMainOpt">stuff</div>-->
+    <!--<div class="menuMainOpt">ipsum</div>-->
 </div>
 <div class="main">
     Words
