border imaged done
was frustrating though

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-<div class="menuBar">
+<div class="menuBar border">
     <ul class="menuTop">
         <li onmouseover="toggle('about')" onmouseout="toggle('about')">
             about
@@ -52,7 +52,7 @@
     <!--<div class="menuMainOpt">stuff</div>-->
     <!--<div class="menuMainOpt">ipsum</div>-->
 </div>
-<div class="main">
+<div class="main border">
     Words
 </div>
 
