misusage bug shown image breakout
solution is to not allow content in the parent div, it pushes rest down

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
     <!--<div class="menuMainOpt">ipsum</div>-->
 </div>
 <div class="main border">
-    Words
+    Words cannot go here, they cause an offset
+    <div class="imgContainer">
+        words here don't matter
+
+    </div>
+    <!--src="c1.jpg" style="width:100%; height:100%"-->
 </div>
 
 </body>
