basic image insert working. tested FF, IE11 & CHR.
scales correctly, cannot find any stretching occurring.
thank you, SO:
http://stackoverflow.com/questions/3029422/image-auto-resize-to-fit-div-container

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Eilish design: Menus, Scrolling images, etc.</title>
+    <title>Eilish design: Menus, Sliding images, etc.</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
 </head>
@@ -54,8 +54,14 @@
 </div>
 <div class="main border">
     <div class="imgContainer">
-        words here don't matter
-
+        <!--<noscript>-->
+            <img src="c3.jpg">
+        <!--</noscript>-->
+        <!--words here don't matter<br>-->
+        <!--<ul class="imgSlider">-->
+            <!--<li><img src="c2.jpg"></li>-->
+            <!--<li><img src="c3.jpg"></li>-->
+        <!--</ul>-->
     </div>
     <!--src="c1.jpg" style="width:100%; height:100%"-->
 </div>
