--- a/index.html
+++ b/index.html
@@ -53,15 +53,20 @@
     <!--<div class="menuMainOpt">ipsum</div>-->
 </div>
 <div class="main border">
-    <div class="imgContainer">
-        <!--<noscript>-->
-            <img src="c3.jpg">
-        <!--</noscript>-->
+    <div class="imgSlider">
+        <noscript>
+            This site uses JavaScript, please activate.
+            <img src="c3.jpg" alt="This site uses JavaScript, please activate.">
+        </noscript>
         <!--words here don't matter<br>-->
-        <!--<ul class="imgSlider">-->
-            <!--<li><img src="c2.jpg"></li>-->
-            <!--<li><img src="c3.jpg"></li>-->
-        <!--</ul>-->
+        <ul>
+            <li><img src="c2.jpg" /></li>
+            <li><img src="c3.jpg" /></li>
+            <li><img src="c2.jpg" /></li>
+            <li><img src="c3.jpg" /></li>
+            <li><img src="c3.jpg" /></li>
+            <li><img src="c2.jpg" /></li>
+        </ul>
     </div>
     <!--src="c1.jpg" style="width:100%; height:100%"-->
 </div>
