basic buttons added
bug: doesn't fluidly resize like the main div does. buttons cut off when
window width halved.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
             <img src="c3.jpg" alt="This site uses JavaScript, please activate.">
         </noscript>
         <!--words here don't matter<br>-->
+        <img class="arrow left" src="arrow-left.png" />
+        <img class="arrow right" src="arrow-right.png" />
+
         <ul>
-            <li><img src="c2.jpg" /></li>
+            <li><img src="c3.jpg" /></li>
             <li><img src="c3.jpg" /></li>
             <li><img src="c2.jpg" /></li>
             <li><img src="c3.jpg" /></li>
